# understudy

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  python-publish.yml
docs/: adk-integration.rst  conf.py  index.rst  installation.rst  langgraph-integration.rst  quickstart.rst
docs/api/: index.rst
docs/examples/: index.rst
docs/tutorial/: assertions.rst  http.rst  index.rst  judges.rst  scenes.rst
example/: README.md  conftest.py  customer_service_agent.py  run_simulation.py  sample_report.html  test_returns.py  test_tags_feature.py  test_with_judges.py
example/adk/: customer_service_agent.py  run_simulation.py  test_returns.py  test_with_judges.py
example/adk/test-results/: adk_report.html  understudy.xml
example/langgraph/: conftest.py  run_simulation.py  test_returns.py
example/langgraph/report/: index.html
example/langgraph/report/runs/: adversarial_policy_bypass_20260315_162549_abb592.html
example/scenes/: adversarial_policy_bypass.yaml  return_eligible_backpack.yaml  return_nonreturnable_earbuds.yaml
example/test-results/: understudy.xml
examples/: README.md
examples/adk/: conftest.py  run_simulation.py  test_adk_returns.py  test_with_judges.py
examples/agentic/: conftest.py  mock_agent.py  run_simulation.py  test_agentic.py
examples/agentic_scenes/: code_review_task.yaml  data_analysis_task.yaml  file_search_task.yaml
examples/langgraph/: customer_service_agent.py  run_simulation.py  test_langgraph_returns.py
examples/langgraph/report/: index.html  metrics.html
examples/langgraph/report/runs/: return_eligible_backpack_20260315_162609_c05802.html  return_nonreturnable_earbuds_20260315_162623_5660cb.html
examples/langgraph/test-results/: langgraph_report.html  langgraph_understudy.xml
examples/scenes/: return_eligible_backpack.yaml
src/understudy/: __init__.py  batch.py  check.py  cli.py  compare.py  diff.py  judge_backends.py  judges.py  mocks.py  models.py  pytest_plugin.py  replay.py  reports.py  runner.py  simulator.py  storage.py  suite.py  trace.py  validation.py
src/understudy/adk/: __init__.py
src/understudy/agentic/: __init__.py  check.py  metrics.py  models.py  runner.py
src/understudy/http/: __init__.py
src/understudy/langgraph/: __init__.py  tools.py
src/understudy/metrics/: __init__.py  builtins.py  registry.py
src/understudy/metrics/templates/: clarity.jinja  policy_compliance.jinja  tone_empathy.jinja
src/understudy/prompts/: __init__.py  rubrics.py
src/understudy/server/: __init__.py  models.py  sessions.py  ui_simulator.py
src/understudy/templates/: base.html  comparison.html  index.html  metrics.html  run_detail.html
src/understudy/templates/init/: conftest.py.template  example_scene.yaml  test_agent.py.template  understudy.yaml.template
tests/: test_agentic.py  test_cli.py  test_compare.py  test_core.py  test_diff.py  test_judges.py  test_langgraph.py  test_pytest_plugin.py  test_replay.py  test_reports.py  test_server.py  test_simulator.py  test_trajectory_match.py  test_validation.py
